add_subdirectory(ArithToVC)
add_subdirectory(NDArrayToLinalg)
add_subdirectory(DropRegions)
add_subdirectory(RegionParallelLoopToGpu)
add_subdirectory(GPUToSPIRV)
add_subdirectory(GPUToGPUX)
add_subdirectory(GPUXToLLVM)
add_subdirectory(MathToVC)
add_subdirectory(XeTileToXeGPU)
add_subdirectory(XeGPUToVC)
add_subdirectory(XeVMToLLVM)
add_subdirectory(XeGPUToXeVM)
