add_subdirectory(ConvertToSPIRV)
add_subdirectory(NDArrayToLinalg)
add_subdirectory(DropRegions)
add_subdirectory(RegionParallelLoopToGpu)
add_subdirectory(GPUToSPIRV)
add_subdirectory(GPUToGPUX)
add_subdirectory(GPUXToLLVM)

if(IMEX_BUILD_VC_CONVERSIONS)
  message(STATUS "Building VC conversion passes (ArithToVC, MathToVC, XeGPUToVC)")
  add_subdirectory(ArithToVC)
  add_subdirectory(MathToVC)
  add_subdirectory(XeGPUToVC)
else()
  message(STATUS "Skipping VC conversion passes (set IMEX_BUILD_VC_CONVERSIONS=ON to enable)")
  message(STATUS "VC conversion passes excluded from TableGen via preprocessor directive")
endif()
